--- a/pagina1.css
+++ b/pagina1.css
@@ -42,7 +42,6 @@ body{
 .main-menu__item{
     list-style: none;
     margin-right: 3rem;
-    
 }
 
 .main-menu__link{
@@ -64,7 +63,7 @@ body{
     grid-template-rows: repeat(2,1fr);
 }
 
-.container > .clases{
+.container > .class{
     margin-top: 50px;
     margin-right: 150px;
     height: auto;
