--- a/pagina2.css
+++ b/pagina2.css
@@ -42,7 +42,6 @@ body{
 .main-menu__item{
     list-style: none;
     margin-right: 3rem;
-    
 }
 
 .main-menu__link{
@@ -64,15 +63,14 @@ body{
     grid-template-rows: repeat(2,1fr);
 }
 
-.container > .clases{
+.container > .class{
     margin-top: 50px;
     margin-right: 180px;
     height: auto;
-    
     /* border: 1px solid black; */
 }
 
-.container  .clases:hover{
+.container  .class:hover{
     cursor: pointer;
     color: black;
     text-decoration: underline;
